--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -25,6 +25,11 @@
     color: #fff;
     border: none;
 }
+.acordeon .trigger h2{
+    margin: 0;
+    font-size: 1.5rem;
+    text-align: start;
+}
 .acordeon .trigger:hover{
     cursor: pointer;
 }
