--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,6 +11,15 @@ body{
     background-color: #000;
     color: #fff;
 }
+a{
+    color:#fff;
+    text-decoration: none;
+}
+a:hover{
+    color: #fff;
+    text-decoration: underline;
+}
+
 .main{
     padding: 1rem;
     margin: 1rem;
