--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,10 +9,10 @@
     content: '';
     display: inline-block;
     position: absolute;
-    top:1rem;
+    top: 1rem;
     right: 1rem;
-    width: 1rem;
-    height: 1rem;
+    width: 2rem;
+    height: 2rem;
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url('/assets/img/icons/header.svg');
@@ -39,6 +39,7 @@
     flex-direction: row;
     align-items: center;
     margin: 0.5rem;
+    font-size: 1.125rem;
 }
 
 .information p::before{
@@ -81,7 +82,7 @@
     .header .title{
         grid-area: title;
         text-align: start;
-        max-width: 220px;
+        max-width: 210px;
     }
     .header .information{
         grid-area: photo;
