--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0.5rem;
+    margin: .5rem;
     font-size: 1.125rem;
 }
 
@@ -85,6 +85,6 @@
         max-width: 210px;
     }
     .header .information{
-        grid-area: photo;
+        grid-area: information;
     }
 }
