--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -13,9 +13,10 @@
     list-style: none;
 }
 
-.skills .tools img{
+.skills .tools ul li img {
     max-width: 50px;
-    margin: 0.5rem;
+    max-height: 50px;
+    margin: 0 .5rem;
 }
 
 .skills .personal ul{
@@ -28,13 +29,13 @@
     padding: 0;
 }
 
-.skills .personal ul{
+.skills .personal ul li {
     margin-left: 2rem;
-    padding: .5rem;
+    padding: .5rem
 }
 
 @media screen and (min-width: 768px) {
-    .skills{
+    .skills {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
