--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -26,6 +26,8 @@
 .header .title{
     font-family: 'Neue Machina';
     text-align: center;
+    color:#F2F2F2;
+    filter: drop-shadow(1px 0px 0px #5A3122);
 }
 
 .information{
@@ -40,6 +42,8 @@
     align-items: center;
     margin: .5rem;
     font-size: 1.125rem;
+    color: #5A3122;
+    filter: drop-shadow(1px 0px 0px #5A3122);
 }
 
 .information p::before{
