--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: 'Neue Machina';
-    src: url('./assets/fonts/neue-machina-regular.otf');
+    src: url('assets/fonts/neue-machina-regular.otf');
 }
 
 body{
