--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -21,7 +21,7 @@ width: 1rem;
 height: 1rem;
 background-repeat: no-repeat;
 background-size: contain;
-background-image: url('./assets/img/icons/calendar.svg');
+background-image: url('assets/img/icons/calendar.svg');
 margin-right: .5rem;
 
 }
