--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,8 +13,8 @@ body{
     min-height: 100vh;
 }
 a{
-    color: #5A3122;
-    filter: drop-shadow(1px 0px 0px #5A3122);
+    color: #fff;
+    filter: drop-shadow(0px 0px 1px #5A3122);
     text-decoration: none;
 }
 a:hover{
