--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -42,7 +42,7 @@
     align-items: center;
     margin: .5rem;
     font-size: 1.125rem;
-    color: #d0d0d0;
+    color: #fff;
     filter: drop-shadow(1px 0px 0px #5A3122);
 }
 
@@ -55,6 +55,9 @@
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
+}
+.information .linkedin::before{
+    background-image: url('../img/icons/linkedin.svg');
 }
 .information .job::before{
     background-image: url('../img/icons/job.svg');
@@ -98,6 +101,6 @@
         margin: .5rem;
         font-size: 1.125rem;
         color: #fff;
-        filter: drop-shadow(1px 0px 0px #5A3122);
+        filter: drop-shadow(0px 0px 3px #5A3122);
     }
 }
